<resources>
    <string name="ClearAll">Clear</string>
    <string name="Pause">Pause</string>
    <string name="Play">Play</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="ad">Ad</string>
    <string name="add_camer_invi">ID is invalid. Please try again.</string>
    <string name="add_camer_no_add">The number of screens have already reached maximum!</string>
    <string name="add_camera">Add Camera</string>
    <string name="add_camera_1_show">Code scanning distribution network</string>
    <string name="add_camera_wifi_pwd">Wi-Fi pwd</string>
    <string name="add_camera_wifi_ssid">Wi-Fi name</string>
    <string name="add_device_danale_next">Next</string>
    <string name="add_device_danale_wifi">No WiFi link found</string>
    <string name="add_device_danale_wifi1_1">Please connect your router first</string>
    <string name="add_device_danale_wifi_introduction">1. Turn on the mobile phone to connect to the local router Wi Fi (only supports 2.4G). \10\102. Please make sure that the password is correctly input and the 2.4G Wi Fi network. If the camera is not online (the wrong password will cause the camera to be offline), please reset the camera and wait for the camera to restart, and then operate again. \10\103. If the router Wi Fi name and password contain special symbols, the connection may fail. Please change the name and password to English letters and numbers.</string>
    <string name="add_device_danale_wifi_pass">Please input a password</string>
    <string name="add_device_danale_wifi_ssid">Please enter the router name</string>
    <string name="add_search_no">Search failed, please try again.</string>
    <string name="add_search_result">Search results</string>
    <string name="add_show1">Click here to add a new device</string>
    <string name="add_show_config1">Configure the device to connect to the WiFi network</string>
    <string name="add_show_config1_show">You have a new device that needs to be connected to your home for WiFi use, or you need to reconfigure the WiFi connection of an old device and have remote access to it. Please select this.</string>
    <string name="add_show_config2">Add online camera</string>
    <string name="add_show_config2_show">Your device has been connected to the router, you need to add it to the App, please select this.</string>
    <string name="add_show_config3">The phone connects directly to the device</string>
    <string name="add_show_config3_show">You want to connect your phone directly to your device\'s WiFi, point-to-point, and use it up close, unlike connecting to your router for remote access, select this.</string>
    <string name="add_twodimensioncode">Starting QR code program...</string>
    <string name="alarm_pir_push">Alarm push</string>
    <string name="alarm_setting_1">Motion detection switch</string>
    <string name="alarm_setting_2">Mobile detection video</string>
    <string name="alarm_setting_3">Alarm recording time(s)</string>
    <string name="alarm_setting_4">Alarm delay(s)</string>
    <string name="alarm_setting_5">Detection sensitivity</string>
    <string name="alarm_setting_5_L">Low</string>
    <string name="alarm_setting_5_M">Middle</string>
    <string name="alarm_setting_5_h">High</string>
    <string name="aleary_add_device">Have been added</string>
    <string name="aler_cancel">Ignore</string>
    <string name="aler_ok">Check</string>
    <string name="aler_ok_show">Already exited the program and cannot view.</string>
    <string name="alerm_detector_layout">Motion detection armed</string>
    <string name="alerm_detector_sensitivity">Motion detection sensibility</string>
    <string name="alerm_getparams">Checking alarm parameters...</string>
    <string name="alerm_getparams_failed">Failed on getting alarm parameters</string>
    <string name="alerm_gpio_alarm">GPIO alarm</string>
    <string name="alerm_io_layout">Alarm input armed</string>
    <string name="alerm_io_move">IO linkage on alarm</string>
    <string name="alerm_ioin_levelhight">High</string>
    <string name="alerm_ioin_levellow">Low</string>
    <string name="alerm_ioout_level">Output level</string>
    <string name="alerm_log">Alarm logs</string>
    <string name="alerm_mail_inform">Armed mail notification</string>
    <string name="alerm_motion_alarm">Motion detection alarm</string>
    <string name="alerm_no_log">No alarm logs</string>
    <string name="alerm_preset_no">No</string>
    <string name="alerm_presetsit">Alarm preset linkage</string>
    <string name="alerm_record">Alarmed record</string>
    <string name="alerm_sensitivity_desc">(More small, more sensitive)</string>
    <string name="alerm_set_failed">Alarm setting failed</string>
    <string name="alerm_setting">Alarm setting</string>
    <string name="alerm_trigger_event">Alarm trigger event</string>
    <string name="alerm_trigger_level">Trigger level</string>
    <string name="alerm_upload_picture">Upload photo on Alarm</string>
    <string name="alerm_upload_picture_time_interval">Upload Interval(Seconds)</string>
    <string name="alerm_uploadinterval_toolong">Upload time cannot be longer than 30 seconds</string>
    <string name="alerm_uploadinterval_toolong1">Upload time cannot be longer than 3600 seconds</string>
    <string name="alerm_uploadpic_prompt">0 or null means no upload photos</string>
    <string name="alerm_void">Enable the alarm sound</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="ap_add_title">AP hot model</string>
    <string name="ap_add_title1">To add</string>
    <string name="ap_add_title2">AP added device, whether the network？</string>
    <string name="ap_add_title3">Distribution network</string>
    <string name="ap_next">Go to WIFI configuration</string>
    <string name="app_name">HDWiFiCam Pro</string>
    <string name="app_name_show">HD</string>
    <string name="app_running">Running</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="arrive_notification_message">Arrived a notification message. Content is \"%1$s\"</string>
    <string name="audioshow_add">Click the plus sign to add a device</string>
    <string name="audioshow_add_con">Connect the device hotspots prefixed with dgo, DGB and dgk, and return to app after successful connection</string>
    <string name="audioshow_add_rm">Enter the router password and press next</string>
    <string name="audioshow_add_select">Select the correct distribution network mode. For the first time, please select the directly connected device or configure the device network</string>
    <string name="back">Back</string>
    <string name="bell_add_name">智能门铃</string>
    <string name="bell_batvalue">当前剩余电量</string>
    <string name="bell_call_audio">语音接听</string>
    <string name="bell_call_cancel">挂断</string>
    <string name="bell_call_cloudmode">记录</string>
    <string name="bell_call_mode">模式</string>
    <string name="bell_call_video">视频接听</string>
    <string name="bell_fils">Local file</string>
    <string name="bell_item_cloud">到访记录</string>
    <string name="bell_item_edit">编辑设备</string>
    <string name="bell_lowbat">低电报警</string>
    <string name="bell_main_title">我的设备</string>
    <string name="bell_pushcheck">Push permission detection</string>
    <string name="bell_status_sleep">门铃休眠中</string>
    <string name="bell_status_sleep1">门铃休眠中,请唤醒门铃</string>
    <string name="bigo_ad_click_to_try">Click to try?</string>
    <string name="bigo_ad_cta_default">View more</string>
    <string name="bigo_ad_description_default">Free access now!</string>
    <string name="bigo_ad_lose_reward">You will lose your reward.</string>
    <string name="bigo_ad_resume">Resume</string>
    <string name="bigo_ad_skip">Skip</string>
    <string name="bigo_ad_skip_video">Skip video?</string>
    <string name="bigo_ad_splash_skip">SKIP</string>
    <string name="bigo_ad_tag_back">bigo_ad_tag_back</string>
    <string name="bigo_ad_tag_close">bigo_ad_tag_close</string>
    <string name="bigo_ad_tag_progressbar">bigo_ad_tag_progressbar</string>
    <string name="bigo_ad_tag_title">bigo_ad_tag_title</string>
    <string name="bigo_ad_title_default">Fantastic and interesting</string>
    <string name="biz_add_cancel">Cancel</string>
    <string name="biz_add_creat">Sure</string>
    <string name="biz_add_edit_show">Enter a username of at least 5 digits</string>
    <string name="biz_add_edit_show1">Enter a password of at least 6 bits</string>
    <string name="biz_add_edit_show2">Enter new password</string>
    <string name="biz_add_edit_show_sucess">Successful password modification</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="dialog_exit_play_tips">Quit playback?</string>
    <string name="n_ap_config_title3" />
    <string name="n_apconnect_1show">Turn on the phone WIFI Settings</string>
    <string name="n_apconnect_2show">Connect DGK-,DGB-,DGC-,DGO-,DBG- device hot spot</string>
    <string name="n_apconnect_2show1">Return to app after connecting hotspot successfully</string>
    <string name="n_apconnect_2title">Connected devices</string>
    <string name="reset">Reset the device</string>
    <string name="restart">Restart</string>
    <string name="sd_setting_videomode_no">Stop video</string>
    <string name="setting">Setting</string>
    <string name="setting_alerm">Alarm</string>
    <string name="setting_ap">AP setting</string>
    <string name="setting_ftp">FTP</string>
    <string name="setting_mail">Email</string>
    <string name="setting_sd_videomode1">Throughout the video</string>
    <string name="setting_sd_videomode2">Alarm video</string>
    <string name="setting_sd_videomode3">Timing video</string>
    <string name="setting_sdcard">Record</string>
    <string name="setting_time">Time</string>
    <string name="setting_user">User</string>
    <string name="setting_wifi">Wifi</string>
    <string name="show_er_title">Click share device ID</string>
    <string name="tips_wifi_nopwd">WiFi has no password?</string>
    <string name="update_title">Check the update device firmware</string>
</resources>