<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:id="@+id/topView" android:background="@mipmap/qh_allbg" android:fitsSystemWindows="true" android:clipToPadding="true" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:gravity="center_vertical" android:id="@+id/Relative_top" android:layout_width="match_parent" android:layout_height="50dp" android:layout_alignParentTop="true">
        <Button android:id="@+id/back" android:layout_alignParentLeft="true" android:layout_centerVertical="true" style="@style/button_back_style1"/>
        <com.shix.shixipc.view.MyTextView android:textSize="18sp" android:textStyle="bold" android:textColor="@color/color_white" android:ellipsize="marquee" android:layout_gravity="center_vertical" android:id="@+id/tv_camera_setting" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:maxWidth="200dp" android:text="@string/setting" android:scrollHorizontally="true" android:singleLine="true" android:shadowDx="1" android:shadowDy="1" android:shadowRadius="1" android:layout_centerInParent="true" android:marqueeRepeatLimit="marquee_forever"/>
    </RelativeLayout>
    <RelativeLayout android:id="@+id/relay_one" android:layout_width="match_parent" android:layout_height="150dp" android:layout_marginTop="1dp" android:layout_below="@+id/Relative_top">
        <ImageView android:layout_gravity="center" android:id="@+id/img_er" android:layout_width="150dp" android:layout_height="150dp" android:layout_marginLeft="20dp" android:layout_marginTop="2dp" android:scaleType="fitCenter"/>
        <TextView android:textColor="@color/color_qh_bom_normal" android:gravity="center" android:id="@+id/textViewDID" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="24dp" android:layout_marginRight="10dp" android:text="BRTC000000ASDFG" android:layout_toRightOf="@+id/img_er" android:layout_alignTop="@+id/img_er"/>
        <TextView android:textColor="@color/color_qh_bom_normal" android:gravity="center" android:id="@+id/textViewVersion" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="20dp" android:layout_marginRight="10dp" android:text="" android:layout_below="@+id/textViewDID" android:layout_alignLeft="@+id/textViewDID" android:layout_alignRight="@+id/textViewDID"/>
        <TextView android:textSize="@dimen/all_other_text_size" android:textColor="@color/color_qh_bom_normal" android:gravity="center" android:id="@+id/textViewSHOWE" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/show_er_title" android:layout_below="@+id/textViewVersion" android:layout_alignLeft="@+id/textViewDID" android:layout_alignRight="@+id/textViewDID" android:layout_centerVertical="true"/>
    </RelativeLayout>
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:layout_below="@+id/relay_one">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView android:textSize="15sp" android:textColor="@color/color_white" android:gravity="center" android:layout_gravity="bottom" android:id="@+id/tvWX" android:background="@drawable/btn_blue_selector" android:visibility="gone" android:layout_width="match_parent" android:layout_height="@dimen/n_blue_button_height" android:layout_marginLeft="20dp" android:layout_marginTop="10dp" android:layout_marginRight="20dp" android:layout_marginBottom="0dp" android:text="云存设备相关参数测试"/>
            <TextView android:textSize="15sp" android:textColor="@color/color_white" android:gravity="center" android:layout_gravity="bottom" android:id="@+id/tvCloud" android:background="@drawable/btn_blue_selector" android:visibility="gone" android:layout_width="match_parent" android:layout_height="@dimen/n_blue_button_height" android:layout_marginLeft="20dp" android:layout_marginTop="10dp" android:layout_marginRight="20dp" android:layout_marginBottom="0dp" android:text="设备云存储"/>
            <LinearLayout android:orientation="vertical" android:id="@+id/linearLayoutAll" android:background="@drawable/background_listbg1" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="30dp" android:layout_marginRight="20dp">
                <Button android:id="@+id/setting_wifi" android:text="@string/setting_wifi" android:drawableLeft="@mipmap/qh_set_wifi" style="@style/button_long_style1"/>
                <View android:background="@color/color_qh_bom_normal_viewline" android:layout_width="match_parent" android:layout_height="0.01dp"/>
                <Button android:id="@+id/setting_use" android:text="@string/setting_user" android:drawableLeft="@mipmap/qh_set_pwd" style="@style/button_long_style1"/>
                <View android:id="@+id/viewTime" android:background="@color/color_qh_bom_normal_viewline" android:layout_width="match_parent" android:layout_height="0.01dp"/>
                <Button android:id="@+id/setting_time" android:text="@string/setting_time" android:drawableLeft="@mipmap/qh_set_time" style="@style/button_long_style1"/>
                <View android:id="@+id/viewAlarm" android:background="@color/color_qh_bom_normal_viewline" android:visibility="gone" android:layout_width="match_parent" android:layout_height="0.01dp"/>
                <Button android:id="@+id/setting_alerm" android:visibility="gone" android:text="@string/setting_alerm" android:drawableLeft="@mipmap/qh_set_alarm" style="@style/button_long_style1"/>
                <Button android:id="@+id/setting_ftp" android:visibility="gone" android:text="@string/setting_ftp" style="@style/button_long_style1"/>
                <View android:background="@color/color_qh_bom_normal_viewline" android:layout_width="match_parent" android:layout_height="0.01dp"/>
                <Button android:id="@+id/setting_mail" android:visibility="gone" android:text="@string/setting_mail" style="@style/button_long_style1"/>
                <Button android:id="@+id/setting_sdcard" android:text="@string/setting_sdcard" android:drawableLeft="@mipmap/qh_set_sd" style="@style/button_long_style1"/>
                <View android:id="@+id/view_sd" android:background="@color/color_qh_bom_normal_viewline" android:layout_width="match_parent" android:layout_height="0.01dp"/>
                <Button android:id="@+id/setting_reboot" android:text="@string/restart" android:drawableLeft="@mipmap/qh_set_reboot" style="@style/button_long_style1"/>
                <View android:background="@color/color_qh_bom_normal_viewline" android:layout_width="match_parent" android:layout_height="0.01dp"/>
                <Button android:id="@+id/setting_reset" android:text="@string/reset" android:drawableLeft="@mipmap/qh_set_res" style="@style/button_long_style1"/>
                <View android:background="#30ffffff" android:visibility="gone" android:layout_width="match_parent" android:layout_height="0.01dp"/>
                <Button android:id="@+id/setting_ap" android:visibility="gone" android:text="@string/setting_ap" style="@style/button_long_style1"/>
                <View android:background="#30ffffff" android:visibility="gone" android:layout_width="match_parent" android:layout_height="0.01dp"/>
                <Button android:id="@+id/check_ver" android:visibility="gone" android:text="@string/update_title" android:drawableLeft="@mipmap/qh_set_set" style="@style/button_long_style1"/>
                <View android:background="#30ffffff" android:visibility="gone" android:layout_width="match_parent" android:layout_height="0.01dp"/>
                <Button android:textSize="16dp" android:gravity="left|center_vertical|center_horizontal|center" android:paddingLeft="15dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="20dp" android:layout_marginLeft="5dp" android:layout_marginTop="15dp" android:layout_marginRight="5dp" android:text="@string/update_title" android:drawablePadding="8dp"/>
            </LinearLayout>
            <Button android:textSize="@dimen/all_other_text_size" android:textColor="#ffffff" android:gravity="center" android:id="@+id/delbtn" android:background="@drawable/btn_red_selector" android:layout_width="match_parent" android:layout_height="45dp" android:layout_marginLeft="20dp" android:layout_marginTop="20dp" android:layout_marginRight="20dp" android:text="@string/delete" android:singleLine="true" android:layout_weight="1"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
