<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:gravity="center" android:orientation="vertical" android:background="@color/color_main" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="20dp">
    <Button android:textSize="14dp" android:textStyle="bold" android:textColor="@color/color_white" android:id="@+id/btn_videomode0" android:background="@drawable/listitem2_pressed_selector" android:layout_width="120dp" android:layout_height="40dp" android:layout_marginBottom="10dp" android:text="@string/sd_setting_videomode_no" android:singleLine="true"/>
    <View android:background="@color/color_qh_bom_normal_viewline" android:layout_width="match_parent" android:layout_height="0.5dp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"/>
    <Button android:textSize="14dp" android:textStyle="bold" android:textColor="@color/color_white" android:id="@+id/btn_videomode1" android:background="@drawable/listitem2_pressed_selector" android:layout_width="120dp" android:layout_height="40dp" android:layout_marginBottom="10dp" android:text="@string/setting_sd_videomode1" android:singleLine="true"/>
    <View android:background="@color/color_qh_bom_normal_viewline" android:layout_width="match_parent" android:layout_height="0.5dp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"/>
    <Button android:textSize="14dp" android:textStyle="bold" android:textColor="@color/color_white" android:id="@+id/btn_videomode2" android:background="@drawable/listitem2_pressed_selector" android:layout_width="120dp" android:layout_height="40dp" android:layout_marginBottom="10dp" android:text="@string/setting_sd_videomode2"/>
    <View android:background="@color/color_qh_bom_normal_viewline" android:layout_width="match_parent" android:layout_height="0.5dp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"/>
    <Button android:textSize="14dp" android:textStyle="bold" android:textColor="@color/color_white" android:id="@+id/btn_videomode3" android:background="@drawable/listitem2_pressed_selector" android:layout_width="120dp" android:layout_height="40dp" android:layout_marginBottom="10dp" android:text="@string/setting_sd_videomode3"/>
</LinearLayout>
