<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@drawable/bg_border_white" android:layout_width="240dp" android:layout_height="wrap_content">
    <TextView android:textSize="14sp" android:textColor="@color/z6" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@+id/tvTips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40dp" android:text="@string/tips_wifi_nopwd"/>
    <View android:background="@color/line_color" android:layout_width="match_parent" android:layout_height="0.5dp" android:layout_marginTop="30dp"/>
    <LinearLayout android:layout_width="match_parent" android:layout_height="48dp">
        <TextView android:textSize="15sp" android:textColor="@color/z8" android:gravity="center" android:id="@+id/tvCancel" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/cancel" android:layout_weight="1"/>
        <View android:layout_gravity="center_vertical" android:id="@+id/tvLine" android:background="@color/line_color" android:layout_width="0.5dp" android:layout_height="27dp"/>
        <TextView android:textSize="15sp" android:textColor="@color/z8" android:gravity="center" android:id="@+id/tvConfirm" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/biz_add_creat" android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
