<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <View android:background="#80000000" android:layout_width="match_parent" android:layout_height="match_parent"/>
    <RelativeLayout android:layout_gravity="center" android:background="@drawable/bigo_ad_cardview_bg" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="168dp" android:layout_marginLeft="48dp" android:layout_marginRight="48dp" android:layout_marginHorizontal="48dp">
        <TextView android:textSize="20sp" android:textColor="#333333" android:ellipsize="end" android:id="@+id/title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="24dp" android:layout_marginTop="20dp" android:layout_marginRight="24dp" android:text="@string/bigo_ad_skip_video" android:lines="1" android:fontFamily="sans-serif-medium" android:layout_marginHorizontal="24dp"/>
        <TextView android:textSize="16sp" android:textColor="#888888" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="24dp" android:layout_marginTop="10dp" android:layout_marginRight="24dp" android:text="@string/bigo_ad_lose_reward" android:layout_below="@+id/title" android:layout_marginHorizontal="24dp"/>
        <TextView android:textSize="14sp" android:textColor="#888888" android:gravity="center" android:id="@+id/btn_skip" android:layout_width="75dp" android:layout_height="36dp" android:text="@string/bigo_ad_skip" android:lines="1" android:layout_alignTop="@+id/btn_resume" android:fontFamily="sans-serif-medium" android:layout_toStartOf="@+id/btn_resume"/>
        <TextView android:textSize="14sp" android:textColor="@android:color/white" android:ellipsize="end" android:gravity="center" android:id="@+id/btn_resume" android:background="@drawable/bigo_ad_button_bg_rectangle_blue" android:paddingLeft="12dp" android:paddingRight="12dp" android:layout_width="wrap_content" android:layout_height="36dp" android:layout_margin="8dp" android:layout_marginRight="10dp" android:text="@string/bigo_ad_resume" android:lines="1" android:layout_alignParentBottom="true" android:fontFamily="sans-serif-medium" android:layout_marginEnd="10dp" android:layout_alignParentEnd="true" android:paddingHorizontal="12dp"/>
    </RelativeLayout>
</FrameLayout>
